fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC01ImpAllAcountRule.dsl
 test 1 キャンペーン:
    2018/11/10 00:12:34:
        impAllEvent:
            media: "yss"              # 媒体
            accountId: 1000           # アカウントID
            netWork: "Search"
            Displays: 1
            Searchs: 2
        inspect:
             holderState.currentState == "over":